<resources>
    <string name="app_name">Vandrejournalen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="calendar">Calendar</string>
    <string name="action_settings">Change theme</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_language">Dansk</string>
    <string name="notes">Notes</string>
    <string name="overview">Overview</string>
    <string name="consultation">Appointment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suscipit tellus mauris At ultrices mi tempus imperdiet nulla malestibulum mattis. Diam maecenas ultricies mi eget mauris.</string>
    <string name="addNote">Add</string>
    <string name="back">Back</string>
    <string name="patients">Patients</string>
    <string name="search_patients">Search for patient</string>
    <string name="exuser">Already signed up?</string>
    <string name="insKey">Insert corresponding key</string>
    <string name="log_out">Log out</string>
    <string name="gp">General Practitioner</string>
    <string name="mw">Midwife</string>
    <string name="sp">Specialist</string>
    <string name="responsible">Responsible</string>
    <string name="choose">Choose a</string>
    <string name="cont">Continue</string>
    <string name="canc">Cancel</string>
    <string name="new_appointment">Create consultation</string>
    <string name="register_patient">Register patient</string>
    <string name="my_journal">My journal</string>
    <string name="phone">Phone:</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="consultations">Consultations</string>
    <string name="test">Tests</string>
    <string name="ultrasound">Ultrasound</string>
    <string name="diabeetus_screening_ogtt">Diabeetus screening - OGTT</string>
    <string name="place_of_birth">Place of birth</string>
    <string name="basic_health_information">Basic health information</string>
    <string name="exit">Exit</string>
    <string name="patient_not_registered">Patient not registered</string>
    <string name="my_patients">My patients</string>
    <string name="last_mens">Last 1. day of period</string>
    <string name="cycle">Cycle</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="is_the_calculation_certain">Is the calculation certain?</string>
    <string name="pre_pregnancy_weight_kg">Pre pregnancy weight - kg</string>
    <string name="height">Height cm</string>
    <string name="bloodtype">Bloodtype determined</string>
    <string name="mother_s_rhesus_type">Mother\'s Rhesus type</string>
    <string name="irregular_antibodies_in_weeks_6_10">Irregular antibodies in weeks 6.-10.</string>
    <string name="child_s_rhesus_type_week_25">Child\'s Rhesus type (week 25)</string>
    <string name="antibody_with_rh_neg_in_week_25">Antibody with rh.neg. in week 25</string>
    <string name="week_29_anti_d_immunoglobulin_given">Week 29 anti-D immunoglobulin given</string>
    <string name="found">Found</string>
    <string name="urine_culture_mark_if_group_b_streptococci_are_found">Urine culture: Mark if group B streptococci are found</string>
    <string name="save_exit">Save and exit</string>
    <string name="schedule">Schedule</string>
    <string name="info_saved">Information saved</string>
    <string name="nconsultation">New consultation</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about">About</string>
    <string name="other">Other</string>
    <string name="nappointment">New appointment</string>
    <string name="register_new_patient">Register new patient</string>
    <string name="atprof">Attach professional</string>
    <string name="newAppoi">New appointment</string>
    <string name="create">Create</string>
    <string name="date">Date</string>
    <string name="attMid">Attach midwife</string>
    <string name="attSpec">Attach specialist</string>
    <string name="cantcreate">Cannot create appointment for this person</string>
    <string name="closeJ">Close journal</string>
    <string name="closeJourn">Are you sure you want to close this journal? You will not be able access it anymore</string>
    <string name="journalclosed">Journal closed</string>
    <string name="notreg">Not registered?</string>
    <string name="insert_your_key_or_cpr">Insert your key or CPR</string>
    <string name="password">Password</string>


    <string-array name="monthsda">
        <item>Januar</item>
        <item>Februar</item>
        <item>Marts</item>
        <item>April</item>
        <item>Maj</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>August</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
