<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_register_patient"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/register_new_patient" />
        <item
            android:id="@+id/nav_patients"
            android:icon="@drawable/ic_action_patients"
            android:title="@string/my_patients"/>

    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_terms"
                android:icon="@drawable/ic_action_condit"
                android:title="@string/terms_and_conditions" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_action_terms"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/log_out"  />
        </menu>
    </item>

</menu>
