<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_results"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_journal" />


    </group>

    <item android:title="@string/other">

        <group android:checkableBehavior="single">
            <menu>
                <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_action_condit"
                android:title="@string/terms_and_conditions" />
                <item
                android:id="@+id/nav_sen"
                android:icon="@drawable/ic_action_terms"
                android:title="@string/about" />
                <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/log_out" />
            </menu>
        </group>
    </item>

</menu>
