<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.sebastian.vandrejournalen.Results.BasicHealthInfoFragment">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/cLayout"
        android:padding="6dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            app:met_floatingLabel="highlight"
            android:hint="@string/last_mens"
            android:focusableInTouchMode="false"
            android:id="@+id/lastMens"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            app:met_floatingLabel="highlight"
            android:hint="@string/cycle"
            android:id="@+id/cycle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/is_the_calculation_certain"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">



            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes"
                android:id="@+id/calcYes"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no"
                android:id="@+id/calcNo"
                />
        </RadioGroup>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            app:met_floatingLabel="highlight"
            android:hint="@string/pre_pregnancy_weight_kg"
            android:id="@+id/grav"
            android:inputType="number"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            app:met_floatingLabel="highlight"
            android:hint="@string/height"
            android:id="@+id/hojde"
            android:inputType="number"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            app:met_floatingLabel="highlight"
            android:hint="BMI"
            android:id="@+id/BMI"
            android:inputType="number"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hep B"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Pos."
                android:id="@+id/hepYes"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Neg."
                android:id="@+id/hepNo"
                />
        </RadioGroup>


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bloodtype"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes"
                android:id="@+id/bloodYes"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no"
                android:id="@+id/bloodNo"
                />
        </RadioGroup>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mother_s_rhesus_type"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Pos."
                android:id="@+id/mrhesYes"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Neg."
                android:id="@+id/mrhesNo"
                />
        </RadioGroup>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/irregular_antibodies_in_weeks_6_10"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Pos."
                android:id="@+id/iregYes"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no"
                android:id="@+id/iregNo"
                />
        </RadioGroup>


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/child_s_rhesus_type_week_25"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Pos."
                android:id="@+id/crhesYes"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Neg."
                android:id="@+id/crhesNo"
                />
        </RadioGroup>


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Antibody with rh.neg. in week 25"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes"
                android:id="@+id/antiYes"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no"
                android:id="@+id/antiNo"
                />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/week_29_anti_d_immunoglobulin_given"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes"
                android:id="@+id/antidYes"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no"
                android:id="@+id/antidNo"
                />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/urine_culture_mark_if_group_b_streptococci_are_found"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/found"
                android:id="@+id/urinYes"
                />

        </LinearLayout>
    </LinearLayout>


</ScrollView>

    <Button
        android:id="@+id/savExitBtn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="end"
        android:background="?attr/colorPrimary"
        android:text="@string/save_exit"
        android:textColor="#FFF"
        android:padding="8dp"
        android:layout_weight="1"
        />
</LinearLayout>
